--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/06.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/06.md
@@ -13,15 +13,19 @@ title = "06 Sentiments (rasa)"
 
 4\. At these words of the sages, Bharata continued speaking, and mentioned in reply to their question the distinction between the Sentiments and the Psychological States.
 
-5-7. And then he said, “O sages, I shall tell you in detail and in due order about the Digest, the Memorial Verse and the Etymology. I am not able by any means to exhaust all the topics about drama; for knowledge,[^mg2] and arts and crafts[^mg3] connected with it are respectively manifold and endless in number. And as it is not possible to treat exhaustively (lit. to go to the end of) even one of these subjects which are [vast] like an ocean, there cannot be any question of mastering them all.
+5-7. And then he said, “O sages, I shall tell you in detail and in due order about the Digest, the Memorial Verse and the Etymology. 
+
+I am not able by any means to exhaust all the topics about drama; for knowledge,[^mg2] and arts and crafts[^mg3] connected with it are respectively manifold and endless in number. 
+
+And as it is not possible to treat exhaustively (lit. to go to the end of) even one of these subjects which are [vast] like an ocean, there cannot be any question of mastering them all.
 
 
-[^mg3]:  śilpāni citrapnstādi-karmāṇi (Ag).
+[^mg3]:  śilpāni citrapustādi-karmāṇi (Ag).
 
 
 [^mg2]:  jñānāni vyākaraṇādīni śāstrāṇi (Ag).
 
-8\. [Hence] I shall tell you about the Digest on Sentiments, Psychological States and such other matters, which has its concents embodied in a small number of Sūtras but which promotes inference [in connection with the subject].
+8\. [Hence] I shall tell you about the Digest on Sentiments, Psychological States and such other matters, which has its concepts embodied in a small number of Sūtras but which promotes inference [in connection with the subject].
 
 ## *Digest, Memorial Verse and Etymology defined*
 
@@ -31,10 +35,11 @@ title = "06 Sentiments (rasa)"
 
 11\. When a rule (lit. meaning) is explained (lit. uttered) briefly in a Sūtra with a minimum (lit. small) number of words, it is called the Memorial Verse which shows the meaning [of the rule clearly].[^mg4]
 
+[^mg4]:  One additional characteristic of the kārikā may be that it should be generally composed in metres like āryā or anuṣṭup, e.g. the Sāṃkhyakārikā.
+
 12-13. Etymology is the definitive meaning which arises in connexion with various nouns, is helped by dictionaries (lit. vocabularies), and the rules of grammatical interpretation, includes the significance of the root involved as well as the reasons modifying it, and is helped by various findings [of Śāstras], and this meaning [of a noun] is established [mainly] from a consideration of its root [and *pratyaya* or affix].
 
 
-[^mg4]:  One additional characteristic of the kārikā may be that it should be generally composed in metres like āryā or anuṣṭup, e.g. the Sāṃkbyakārikā.
 
 14\. O the best of Brahmins, [the subjects included into] the Digest which I mentioned earlier, will now be discussed in detail with the necessary Memorial Verses and Etymologies connected with them.
 
@@ -60,7 +65,8 @@ title = "06 Sentiments (rasa)"
 
 [^mg8]:  sthāyibhāva—Keith translates the term as ‘dominant emotion’ (Skt. Drama) and Haas as ‘Permanent State’ (DR.) and others as ‘permanent mood’ (e.g. S. K. De, Skt Poetics, Vol. II. p. 26).
 
-18-21. The thirty-three Complementary Psychological States (*vyabhicāribhāva*)[^mg9] are known to be the following: discouragement, weakness, apprehension, envy, intoxication, weariness, indolence, depression, anxiety, distraction, recollection, contentment, shame, inconstancy, joy, agitation, stupor, arrogance, despair, impatience, sleep, epilepsy, dreaming, awakening, indignation, dissimulation, cruelty, assurance, sickness, insanity, death, fright and deliberation. These are defined by their names.
+18-21. The thirty-three Complementary Psychological States (*vyabhicāribhāva*)[^mg9] are known to be the following: discouragement, weakness, apprehension, envy, intoxication, weariness, indolence, depression, anxiety, distraction, recollection, contentment, 
+shame, inconstancy, joy, agitation, stupor, arrogance, despair, impatience, sleep, epilepsy, dreaming, awakening, indignation, dissimulation, cruelty, assurance, sickness, insanity, death, fright and deliberation. These are defined by their names.
 
 
 [^mg9]:  These are also known as sañcāri-bhāva which was translated as ‘transitory emotion or mood’. See SD.
