--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/06.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/06.md
@@ -65,8 +65,13 @@ And as it is not possible to treat exhaustively (lit. to go to the end of) even 
 
 [^mg8]:  sthāyibhāva—Keith translates the term as ‘dominant emotion’ (Skt. Drama) and Haas as ‘Permanent State’ (DR.) and others as ‘permanent mood’ (e.g. S. K. De, Skt Poetics, Vol. II. p. 26).
 
-18-21. The thirty-three Complementary Psychological States (*vyabhicāribhāva*)[^mg9] are known to be the following: discouragement, weakness, apprehension, envy, intoxication, weariness, indolence, depression, anxiety, distraction, recollection, contentment, 
-shame, inconstancy, joy, agitation, stupor, arrogance, despair, impatience, sleep, epilepsy, dreaming, awakening, indignation, dissimulation, cruelty, assurance, sickness, insanity, death, fright and deliberation. These are defined by their names.
+18-21. The thirty-three Complementary Psychological States (*vyabhicāribhāva*)[^mg9] are known to be the following: discouragement, weakness, apprehension, envy, intoxication, weariness, indolence, depression, anxiety, distraction, recollection, contentment,  
+shame, inconstancy, joy, agitation, stupor, arrogance, despair, impatience, sleep, epilepsy,  
+dreaming, awakening, indignation,  
+dissimulation, cruelty,  
+assurance, sickness, insanity,  
+death,  
+fright and deliberation. These are defined by their names.
 
 
 [^mg9]:  These are also known as sañcāri-bhāva which was translated as ‘transitory emotion or mood’. See SD.
@@ -75,10 +80,11 @@ shame, inconstancy, joy, agitation, stupor, arrogance, despair, impatience, slee
 
 22\. Paralysis, Perspiration, Horripilation, Change of Voice, Trembling, Change of Colour, Weeping and Fainting are the eight Sāttvika States.[^mg10]
 
-## *Four kinds of Histrionic Representation*
-
 
 [^mg10]:  sāttvika-bhāva—The word sāttvika cannot be properly translated into English. Keith does not make any such attempt (see Skt. Drama) Haas translates the sāttvika-bhāva as ‘Involuntary States.’ But this seems to be very misleading, for the NŚ. takes sattva to be connected with manas. (see VII 93), and most of the later writers follow this work in this respect. So the author of the ND. (III. 153) writes “avahitaṃ manaḥ sattvaṃ tat prayojanaṃ heturasyeti sāttvikaḥ; mano'navadhāne hi na śakyante eva svarabhedādayo nāṭyena darśayitum.”. The NŚ. has also a definition of sattva which is as follows: “dehātmakaṃ bhavet sattvam” (XXIV. 7). The author of the BhP. elaborately defines the term sattva and discusses the psychological process connected with its use; see (pp. 13-14). Viśvanātha in his SD. (164) defines sattva as follows: “sattvaṃ nāma sātmaviśrāmaprakrāśakaro kaścanāntaro dharmaḥ”.
+
+## *Four kinds of Histrionic Representation*
+
 
 23\. Four kinds of Histrionic Representation are Gestures (*āṅgika*)[^mg11], Words (*vācika*)[^mg12], Dresses and Make-up (*āhārya*)[^mg13] and the Representation of the Sattva (*sāttvika*).[^mg14]
 
@@ -105,10 +111,11 @@ shame, inconstancy, joy, agitation, stupor, arrogance, despair, impatience, slee
 
 And the Verbal (*bhāratī*), the Grand (*sāttvatī*), the Graceful (*kaiśikī*) and the Energetic (*ārabhaṭī*) are the four Styles.[^mg16]
 
-## *Four Local Usages*
 
 
 [^mg16]:  Haas translates vṛttis as Styles of Procedure (DR. p. 67). The four Styles are translated by him as Eloquent (bhāratī), Grandiose (sāttvatī), Gay (kaiśikī) and Horrific (ārabhaṭī). We follow Keith’s translation (Skt. Drama, p. 326). For details about vṛttis see XXII. lff.
+
+## *Four Local Usages*
 
 25-26. Āvanti, Dākṣinātyā, Oḍramāgadhī and Pañcālamadhyamā are the four Local Usages (*pravṛtti*)[^mg17] in a dramatic performance.
 
