--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/06.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/06.md
@@ -152,24 +152,35 @@ The musical instruments are of four kinds: stringed (*tata*) covered (*avanaddha
 
 ## *Sentiments explained*
 
-In that connexion I shall first of all explain the Sentiments (*rasa*). No [poetic] meaning proceeds [from speech] without [any kind of] Sentiment. Now the Sentiment is produced (*rasa-niṣpattiḥ*) from a combination (*saṃyoga*)[^mg22] of Determinants (*vibhāva*), Consequents (*anubhāva*) and Complementary Psychological States (*vyabhicāri-bhāva*). Is there any instance [parallel to it], [Yes], it is said that, as taste (*rasa*) results from a combination of various spices, vegetables and other articles, and as six tastes are produced by articles such as, raw sugar or spices or vegetables, so the Durable Psychological States (*sthāyibhāva*), when they come together with various other Psychological States, attain the quality of a Sentiment (*i.e*. become Sentiment). Now one enquires, “What is the meaning of the word *rasa*”? It is said in reply [that, *rasa* is so called] because it is capable of being tasted (*āsvādyate*). How is *rasa* tasted? [In reply] it is said that just as well-disposed persons while eating food cooked with many kinds of spice, enjoy (*āsvādayanti*) its tastes, and attain pleasure and satisfaction, so the cultured people taste the Durable Psychological States while they see them represented by an expression of the various Psychological States with Words, Gestures and the Sattva, and derive pleasure and satisfaction. Thus is explained [the Memorial Verse ending with] *tasmān nāṭyarasā iti*.[^mg23] For in this connexion there are two traditional couplets:
+In that connexion I shall first of all explain the Sentiments (*rasa*). No [poetic] meaning proceeds [from speech] without [any kind of] Sentiment. 
 
-
-[^mg23]:  See below 33-34.
+Now the Sentiment is produced (*rasa-niṣpattiḥ*) from a combination (*saṃyoga*)[^mg22] of Determinants (*vibhāva*), Consequents (*anubhāva*) and Complementary Psychological States (*vyabhicāri-bhāva*). 
 
 
 [^mg22]:  The NŚ. nowhere explains the terms niṣpatti and saṃyoga of this definition and does not include the sthāyibhāva in it (the def.). Hence the theory of rasa has come to be interpreted differently in later times by Lollata, Śaṅkuka, (Bhaṭṭa) Nāyaka and Abhinavagupta.
 
-32-33. Just as connoisseur of cooked food (*bhakta*) while eating food which has been prepared from various spices and other articles taste it, so the learned people taste in their heart (*manas*) the Durable Psychological States (such as love, sorrow etc.) when they are represented by an expression of the Psychological States with Gestures. Hence these Durable Psychological States in a drama are called Sentiments.[^mg24]
+Is there any instance [parallel to it], [Yes], it is said that, as taste (*rasa*) results from a combination of various spices, vegetables and other articles, and as six tastes are produced by articles such as, raw sugar or spices or vegetables, so the Durable Psychological States (*sthāyibhāva*), when they come together with various other Psychological States, attain the quality of a Sentiment (*i.e*. become Sentiment). 
 
-## *Relation between Sentiments and Psychological States*.
+Now one enquires, “What is the meaning of the word *rasa*”? It is said in reply [that, *rasa* is so called] because it is capable of being tasted (*āsvādyate*). How is *rasa* tasted? [In reply] it is said that just as well-disposed persons while eating food cooked with many kinds of spice, enjoy (*āsvādayanti*) its tastes, and attain pleasure and satisfaction, so the cultured people taste the Durable Psychological States while they see them represented by an expression of the various Psychological States with Words, Gestures and the Sattva, and derive pleasure and satisfaction. Thus is explained [the Memorial Verse ending with] *tasmān nāṭyarasā iti*.[^mg23] 
 
+
+[^mg23]:  See below 33-34.
+
+For in this connexion there are two traditional couplets:
+
+
+32-33. Just as connoisseur of cooked food (*bhakta*) while eating food which has been prepared from various spices and other articles taste it,  
+so the learned people taste in their heart (*manas*) the Durable Psychological States (such as love, sorrow etc.) when they are represented by an expression of the Psychological States with Gestures. Hence these Durable Psychological States in a drama are called Sentiments.[^mg24]
 
 [^mg24]:  For a discussion on Bharata’s theory of rasa see Skt, Poetics, Vol. II. PP-25ff.
 
-² Now one enquires, “Do the Psychological States come out of the Sentiments or the Sentiments come out of the Psychological States?” On this point, some are of opinion that they arise from their mutual contact. But this is not so. Why?
+## *Relation between Sentiments and Psychological States*.
 
-It is apparent that the Sentiments arise from the Psychological States and not the Psychological States from the Sentiments. For [on this point] there are [traditional] couplets such as:
+Now one enquires, “Do the Psychological States come out of the Sentiments or the Sentiments come out of the Psychological States?” On this point, some are of opinion that they arise from their mutual contact. But this is not so. Why?
+
+It is apparent that the Sentiments arise from the Psychological States and not the Psychological States from the Sentiments. 
+
+For [on this point] there are [traditional] couplets such as:
 
 34-35. The Psychological States are so called by experts it drama, for they make one feel (*bhāvayanti*) the Sentiments in connexion with various modes of dramatic representation. Just as by many articles of various kinds, auxiliary cooked eatable (*vyañjana*)[^mg25] is brought forth, so the Psychological States along with different kinds of Histrionic Representation will cause the Sentiments to be felt.
 
