--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/06.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/06.md
@@ -195,23 +195,28 @@ For [on this point] there are [traditional] couplets such as:
 
 ## *Eight Sentiments from four original ones*
 
-Now we shall describe the origin, colours, [presiding] deities, and examples of these Sentiments. Sources of these [eight] Sentiments are the four [original] Sentiments *e.g*. Erotic, Furious, Heroic and Odious.[^26]
+Now we shall describe the origin, colours, [presiding] deities, and examples of these Sentiments. 
+
+Sources of these [eight] Sentiments are the four [original] Sentiments *e.g*. Erotic, Furious, Heroic and Odious.[^26]
+
+[^26]:  According to Indian practice, boiled rice is the principle food (anna), and the various preparations from vegetables, meat and fish are only auxiliary eatables (vyañjana).
 
 39\. The Comic [Sentiment] arises from the Erotic, the Pathetic from the Furious, the Marvellous from the Heroic, and the Terrible from the Odious.
 
 
-[^26]:  According to Indian practice, boiled rice is the principle food (anna), and the various preparations from vegetables, meat and fish are only auxiliary eatables (vyañjana).
-
-40-41. A mimicry of the Erotic [Sentiment] is called the Comic,[^27] and the result of the Furious Sentiment is the Pathetic, the result of the Heroic Sentiment is called the Marvellous, and that which is Odious to see, results in the Terrible.
+40-41. A mimicry of the Erotic [Sentiment] is called the Comic,[^27] and the result of the Furious Sentiment is the Pathetic,  
+the result of the Heroic Sentiment is called the Marvellous, and that which is Odious to see, results in the Terrible.
 
 
 [^27]:  Bhoja criticises this view of the author of the NŚ. in his Sr. Pr. See Ramaswamy Sastri, Bh. P. introduction p. 28; also V. Raghavan, Śr. Pr, 27.
 
-42-43. The Erotic Sentiment is light green (*śyāma*), the Comic Sentiment white, the Pathetic (Sentiment) grey (*kapota*), the Furious Sentiment red, the Heroic (Sentiment) yellowish (*gaura*), the Terrible (Sentiment) black, the Odious (Sentiment) blue and the Marvellous (Sentiment) yellow.
+42-43. The Erotic Sentiment is light green (*śyāma*), the Comic Sentiment white, the Pathetic (Sentiment) grey (*kapota*), the Furious Sentiment red,  
+the Heroic (Sentiment) yellowish (*gaura*), the Terrible (Sentiment) black, the Odious (Sentiment) blue and the Marvellous (Sentiment) yellow.
 
 ## *Presiding deities of Sentiments*
 
-44-45. Viṣṇu is the god of the Erotic, Pramathas of the Comic, Rudra of the Furious, Yama of the Pathetic, Mahākāla (Śiva) of the Odious, Kāla of the Terrible, Indra of the Heroic, and Brahmā of the Marvellous Sentiments.
+44-45. Viṣṇu is the god of the Erotic, Pramathas of the Comic, Rudra of the Furious, Yama of the Pathetic,  
+Mahākāla (Śiva) of the Odious, Kāla of the Terrible, Indra of the Heroic, and Brahmā of the Marvellous Sentiments.
 
 ¹ Thus have been described the origin, colours and deities of these [Sentiments]. Now we shall explain the Determinants, the Consequents, the Complementary Psychological States, their combination, definition and examples.
 
