--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/06.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/06.md
@@ -224,18 +224,41 @@ We shall now enumerate the Durable Psychological States in different Sentiments.
 
 ## *The Erotic Sentiment (*śṛṅgāra*)*
 
-Of these, the Erotic (*śṛṅgāra*) Sentiment proceeds from the Durable Psychological State of love (*rati*), and it has as its basis (lit. soul) a bright attire; for whatever in this world is white, pure, bright and beautiful is appreciated in terms of the Durable Psychological State of love. For example, one who is elegantly dressed is called a lovely person (*śṛṅgārin*). Just as persons are named, after the profession of their father, mother or family in accordance with the traditional authority, so the Sentiments, the Psychological States and other objects connected with drama are given names in pursuance of the practice and the traditional authority. Hence the Erotic Sentiment has been so named on account of its usually being associated with a bright and elegant attire. It owes its origin to men and women and relates to the fulness of youth. It has two bases: union and separation. Of these two, the Erotic Sentiment in union arises from Determinants like the pleasures of the season, the enjoyment of garlands, unguents, ornaments, [the company of] beloved persons, objects [of senses], splendid mansions, going to a garden, and enjoying [oneself] there, seeing [the beloved one], hearing [his or her words], playing and dallying [with him or her]. It should be represented on the stage by Consequents such as clever movement of eyes, eyebrows, glances, soft and delicate movement of limbs, and sweet words and similar other things. Complimentary Psychological States in it do not include fear, indolence, cruelty and disgust. [The Erotic Sentiment] in separation should be represented on the stage by Consequents such as, indifference, langour, fear, jealousy, fatigue anxiety, yearning, drowsiness, sleep, dreaming, awakening, illness, insanity, epilepsy, inactivity, fainting, death and other conditions.
+Of these, the Erotic (*śṛṅgāra*) Sentiment proceeds from the Durable Psychological State of love (*rati*), and it has as its basis (lit. soul) a bright attire; for whatever in this world is white, pure, bright and beautiful is appreciated in terms of the Durable Psychological State of love. 
 
-Now it has been asked, “If the Erotic Sentiment Has its origin in love, why does it [sometimes] manifest itself through pathetic conditions?” [In reply to this] it is said, “It has been mentioned before that the Erotic Sentiment has its basis in union as well as in separation. Authorities on *ars amatoria (vaiśikaśāstra*) have mentioned ten conditions [of the persons separated from their beloved ones, which are pathetic]. We shall discuss them in the chapter on the Harmonious Histrionic Representation.[^28] The Pathetic Sentiment relates to a condition of despair owing to the affliction under a curse, separation from dear ones, loss of wealth, death or captivity, while the Erotic Sentiment based on separation relates to a condition of retaining optimism arising out of yearning and anxiety. Hence the Pathetic Sentiment, and the Erotic Sentiment in separation differ from each other. And this is the reason why the Erotic Sentiment includes conditions available in all other Sentiments.
+For example, one who is elegantly dressed is called a lovely person (*śṛṅgārin*).  
+Just as persons are named, after the profession of their father, mother or family in accordance with the traditional authority, so the Sentiments, the Psychological States and other objects connected with drama are given names in pursuance of the practice and the traditional authority. 
 
+Hence the Erotic Sentiment has been so named on account of its usually being associated with a bright and elegant attire. It owes its origin to men and women and relates to the fulness of youth. 
+
+It has two bases: union and separation.  
+
+Of these two, the Erotic Sentiment in union arises from Determinants like the pleasures of the season, the enjoyment of garlands, unguents, ornaments, [the company of] beloved persons, objects [of senses], splendid mansions, going to a garden, and enjoying [oneself] there, seeing [the beloved one], hearing [his or her words], playing and dallying [with him or her].  
+
+It should be represented on the stage by Consequents such as clever movement of eyes, eyebrows, glances, soft and delicate movement of limbs, and sweet words and similar other things. 
+
+Complimentary Psychological States in it do not include fear, indolence, cruelty and disgust. 
+
+[The Erotic Sentiment] in separation should be represented on the stage by Consequents such as, indifference, langour, fear, jealousy, fatigue anxiety, yearning, drowsiness, sleep, dreaming, awakening, illness, insanity, epilepsy, inactivity, fainting, death and other conditions.
+
+Now it has been asked, “If the Erotic Sentiment Has its origin in love, why does it [sometimes] manifest itself through pathetic conditions?”  
+
+[In reply to this] it is said, “It has been mentioned before that the Erotic Sentiment has its basis in union as well as in separation".  
+Authorities on *ars amatoria (vaiśikaśāstra*) have mentioned ten conditions [of the persons separated from their beloved ones, which are pathetic]. We shall discuss them in the chapter on the Harmonious Histrionic Representation.[^28] 
 
 [^28]:  An example of this is the Prahasana.
+
+The Pathetic Sentiment relates to a condition of despair owing to the affliction under a curse, separation from dear ones, loss of wealth, death or captivity, while the Erotic Sentiment based on separation relates to a condition of retaining optimism arising out of yearning and anxiety.  
+Hence the Pathetic Sentiment, and the Erotic Sentiment in separation differ from each other.  
+And this is the reason why the Erotic Sentiment includes conditions available in all other Sentiments.
+
 
 46\. And the Sentiment called Erotic is generally happy, connected with desired objects, enjoyment of seasons, garlands and similar other things, and it relates to [the union of] man and woman.
 
 There are besides two Āryās related to the preceding Sūtra:
 
-47-48. The Erotic Sentiment arises in connexion with favourable seasons, garlands, ornaments, enjoyment of the company of beloved ones, music and poetry, and going to the garden and roaming there. It should be represented on the stage by means of composure of the eyes and the face, sweet and smiling words, satisfaction and delight, and graceful movements of limbs.
+47-48. The Erotic Sentiment arises in connexion with favourable seasons, garlands, ornaments, enjoyment of the company of beloved ones, music and poetry, and going to the garden and roaming there.  
+It should be represented on the stage by means of composure of the eyes and the face, sweet and smiling words, satisfaction and delight, and graceful movements of limbs.
 
 ## *The Comic Sentiment (*hāsya*)*
 
