--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/06.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/06.md
@@ -262,7 +262,12 @@ It should be represented on the stage by means of composure of the eyes and the 
 
 ## *The Comic Sentiment (*hāsya*)*
 
-Now the Comic (*hāsya*) has as its basis the Durable Psychological State of laughter. This is created by Determinants such as, showing unseemly dress or ornament, impudence, greediness, quarrel, defective limb, use of irrelevant words, mentioning of different faults, and similar other things. This (the Comic Sentiment) is to be represented on the stage by Consequents like the throbbing of the lips, the nose and the cheek, opening the eyes wide or contracting them, perspiration, colour of the face, and taking hold of the sides. Complementary Psychological States in it are indolence, dissimulation, drowsiness, sleep, dreaming, insomnia, envy and the like. This (Sentiment), is of two kinds: self-centred and centred in others. When a person himself laughs, it relates to the self-centred (Comic Sentiment), but when he makes others laugh, it (the Comic Sentiments therein) is centred in others.
+Now the Comic (*hāsya*) has as its basis the Durable Psychological State of laughter.  
+This is created by Determinants such as, showing unseemly dress or ornament, impudence, greediness, quarrel, defective limb, use of irrelevant words, mentioning of different faults, and similar other things.  
+This (the Comic Sentiment) is to be represented on the stage by Consequents like the throbbing of the lips, the nose and the cheek, opening the eyes wide or contracting them, perspiration, colour of the face, and taking hold of the sides.  
+Complementary Psychological States in it are indolence, dissimulation, drowsiness, sleep, dreaming, insomnia, envy and the like.  
+This (Sentiment), is of two kinds: self-centred and centred in others.  
+When a person himself laughs, it relates to the self-centred (Comic Sentiment), but when he makes others laugh, it (the Comic Sentiments therein) is centred in others.
 
 There are two traditional Āryās here:
 
