--- a/laxaNam/granthaH/dhvanyAlokaH/mUlam/4.md
+++ b/laxaNam/granthaH/dhvanyAlokaH/mUlam/4.md
@@ -274,15 +274,15 @@ title: ४
 चित्र्यम् । वाच्यवाचकयोरविनाभावेन प्रवृत्तेः । वाच्यानां च काव्ये-  
 प्रतिभासमानानां यद्रूपं तत्तु ग्राह्यविशेषाभेदेनैव प्रतीयते । तेनो-  
 क्तिवैचित्र्यवादिना वाच्यवैचित्र्यमनिच्छताप्यवश्यमेवाभ्युपगन्तव्यम् ।  
+
 तदयमत्र सङ्क्षेपः ---  
-वाल्मीकिव्यतिरिक्तस्य यद्येकस्यापि कस्यचित् ।  
-इष्यते प्रतिभार्थेषु तत्तदानन्त्यमक्षयम् ॥  
+
+> वाल्मीकिव्यतिरिक्तस्य यद्येकस्यापि कस्यचित् ।  
+> इष्यते प्रतिभार्थेषु तत्तदानन्त्यमक्षयम् ॥  
   
-किञ्च, उक्तिवैचित्र्यं यत्काव्यनवत्वे निबन्धनमुच्यते तदस्मत्पक्षा-  
-नुगुणमेव । यतो यावानयं काव्यार्थानन्त्यभेदहेतुः प्रकारः प्राग्दर्शितः  
-स सर्व एव पुनरुक्तिवैचित्र्याद् द्विगुणतामापद्यते । यश्चायमुपमाश्लेषादि-  
-रलङ्कारवर्गः प्रसिद्धः स भणितिवैचित्र्यादुपनिबध्यमानः स्वयमेवानव-  
-धिर्धत्ते पुनः शतशाखताम्। भणितिश्च स्वभाषाभेदेन व्यवस्थिता सती  
+किञ्च, उक्तिवैचित्र्यं यत्काव्यनवत्वे निबन्धनमुच्यते तदस्मत्पक्षानुगुणमेव । यतो यावानयं काव्यार्थानन्त्यभेदहेतुः प्रकारः प्राग्दर्शितः  
+स सर्व एव पुनरुक्तिवैचित्र्याद् द्विगुणतामापद्यते ।  
+यश्चायमुपमाश्लेषादिरलङ्कारवर्गः प्रसिद्धः स भणितिवैचित्र्यादुपनिबध्यमानः स्वयमेवानवधिर्धत्ते पुनः शतशाखताम्। भणितिश्च स्वभाषाभेदेन व्यवस्थिता सती  
 प्रतिनियतभाषागोचरार्थवैचित्र्यनिबन्धनं पुनरपरं काव्यार्थानामान-  
 न्त्यमापादयति । यथा ममैव ---  
 मम मम इति भणतो व्रजति कालो जनस्य ।  
