--- a/laxaNam/granthaH/dhvanyAlokaH/sarva-prastutiH/4.md
+++ b/laxaNam/granthaH/dhvanyAlokaH/sarva-prastutiH/4.md
@@ -6,7 +6,11 @@ title = "४"
 
 
 चतुर्थ उद्द्योतः
-चतुर्थ उद्द्योतः  एवं ध्वनिं सप्रपञ्चं विप्रतिपत्तिनिरासार्थं व्युत्पाद्य तद्व्युत्पादने लोचनं चतुर्थ उद्द्योतः कृत्यपञ्चकनिर्वाहयोगेऽपि परमेश्वरः ।
+चतुर्थ उद्द्योतः  एवं ध्वनिं सप्रपञ्चं विप्रतिपत्तिनिरासार्थं व्युत्पाद्य तद्व्युत्पादने
+
+लोचनं
+
+चतुर्थ उद्द्योतः कृत्यपञ्चकनिर्वाहयोगेऽपि परमेश्वरः ।
 नान्योपकरणापेक्षो यया तां नौमि शाङ्करीम् ॥ ॥
 उद्योतान्तरसङ्गतिं विरचयितुं वृतिकार आहएवमिति ।
 प्रयोजनान्तरमिति ।
@@ -71,7 +75,11 @@ __________
 अतो ह्यन्यतमेनापि प्रकारेण विभूषिता ।
 वाणी नवत्वमायाति पूर्वार्थान्वयवत्यपि  ॥ २ ॥
 
-लोचनं तत्र सत्काव्यकरणे कथमस्य व्यापार इति पूर्वं वक्तव्यं निष्पादितस्य ज्ञेयत्वादिति तदुच्यते
+
+
+लोचनं
+
+तत्र सत्काव्यकरणे कथमस्य व्यापार इति पूर्वं वक्तव्यं निष्पादितस्य ज्ञेयत्वादिति तदुच्यते
 ध्वनेर्य इति ॥१ ॥
 
 ननु ध्वनिभेदात्प्रतिभानामानन्त्यमिति व्यधिकरणमेतदित्यभिप्रायेणाशङ्कतेकथमितीति ।
@@ -150,7 +158,11 @@ __________
 महद्भिरपि मातङ्गैः सिंहः किमभिभूयते ॥ ॥
 इत्येवमादिषु श्लोकेषु सत्स्वप्यर्थान्तरसङ्क्रमितवाच्यध्वनिसमाश्रयेण नवत्वम् ।
 विवक्षितान्यपरवाच्यस्याप्युक्तप्रकारसमाश्रयेण नवत्वं यथा निद्राकैतविनः प्रियस्य वदने विन्यस्य वक्रं वधूः      बोधत्रासनिरुद्धचुम्बनरसाप्याभोगलोलं स्थिता ।
-लोचनं नवत्वमिति सङ्गतिः ।
+
+
+लोचनं
+
+नवत्वमिति सङ्गतिः ।
 द्वितीयः प्रथमशब्दोऽर्थान्तरेऽनपाकरणीयप्रधानत्वासाधारणत्वादिव्यङ्ग्यधर्मान्तरे सङ्क्रान्तं स्वार्थं व्यनक्ति ।
 एवं सिंहशब्दोऽपि वीरत्वानपेक्षत्वविस्मयनीयत्वादौ व्यङ्ग्यधर्मान्तरे सङ्क्रान्तं स्वार्थं ध्वनति ।
 एवं प्रथमस्य द्वौ भेदावुदाहृत्य द्वितीयस्याप्युदाहर्तुमासूत्रयतिविवक्षितेति ।
@@ -181,7 +193,11 @@ __________
 इत्यादेःश्लोकस्य,     शून्यं वासगृहं विलोक्य शयनादुत्थाय किञ्चिच्छनै      र्निद्राव्याजमुपागतस्य सुचिरं निर्वर्ण्य पत्युर्मुखम् ।
 विस्रब्धं परिचुम्ब्य जातपुलकामालोक्य गण्डस्थलीं      लज्जानम्रमुखी प्रियेण हसता बाला चिरं चुम्बिता ॥    ॥
 इत्यादिषु श्लोकेषु सत्स्वपि नवत्वम् ।
-यथा वाऽतरङ्गभ्रूभङ्गाऽ लोचनं क्षणमात्रन्धृतश्चुम्बनाभिलाषो यया ।
+यथा वाऽतरङ्गभ्रूभङ्गाऽ
+
+लोचनं
+
+क्षणमात्रन्धृतश्चुम्बनाभिलाषो यया ।
 अत एव आभोगेन पुनः पुनर्निद्राविचारनिर्वर्णनया विलोलं कृत्वा स्थिता, न तु सर्वथैव चुम्बनान्निवर्तितुं शक्नोतीत्यर्थः ।
 एवंभूतैषा यदि मया परिचुम्ब्यते, तद्विलक्षा विमुखीभवेदिति तस्यापि प्रियस्य परिचुम्बनविषये निरारम्भस्य ।
 हृदयं साकाङ्क्षप्रतिपत्ति नामेति ।
@@ -232,7 +248,11 @@ __________
 रसभावादीनां हि प्रत्येकं विभावानुभावव्यभिचारिसमाश्रयादपरिमितत्वम् ।
 तेषां चैकैकप्रभेदापेक्षयापि तावज्जगद्वृत्तमुपनिबध्यमानं सुकविभिस्तदिच्छावशादन्यथा स्थितमप्यन्यथैव विवर्तते ।
 प्रतिपादितं चैतच्चित्रविचारावसरे ।
-लोचनं रतिरुक्ता, सोभयोरप्येकस्वरूपचित्तवृत्यनुप्रवेशमाचक्षाणा रति सुतरां पोषयति  ॥ २  ॥  ॥ ॥
+
+
+लोचनं
+
+रतिरुक्ता, सोभयोरप्येकस्वरूपचित्तवृत्यनुप्रवेशमाचक्षाणा रति सुतरां पोषयति  ॥ २  ॥  ॥ ॥
 एवं मौलं भेदचतुष्टयमुदाहृत्यालक्ष्यक्रमभेदेष्वतिदेशमुखेन सर्वोपभेदविषयं निर्देशं करोतियुक्त्यानयेत ।
 अनुसर्तव्य इति ।
 उदाहर्तव्य इत्यर्थः ।
@@ -270,7 +290,11 @@ __________
 अर्थविशेषान् सा जयति विकटकविगोचरा वाणी ॥
 इति छाया] ।
 तदित्थं रसभावाद्याश्रयेण काव्यार्थानामानन्त्यं सुप्रतिपादतम् ।
-एतदेवोपपादयितुमुच्यते लोचनं प्रतिपादितं "भावानचेतनानपि चेतनवच्चेतनानचेतनवदि"त्यत्र ।
+एतदेवोपपादयितुमुच्यते
+
+लोचनं
+
+प्रतिपादितं "भावानचेतनानपि चेतनवच्चेतनानचेतनवदि"त्यत्र ।
 अतथास्थितानपि बहिस्तथासंस्थितानिवेति ।
 इवशब्देन एकतरत्र विश्रान्तियोगाभावादेव सुतरां विचित्ररूपानित्यर्थः ।
 हृदय इति ।
@@ -382,7 +406,11 @@ __________
 प्रबन्धे चाङ्गी रस एक एवोपनिबध्यमानोऽर्थविशेषलाभं छायातिशयं च पुष्णाति ।
 कस्मिन्निवेति चेत्यथा रामायणे यथा वा महाभारते ।
 रामायेणे हि करुणो रसः स्वयमादिकविनासूत्रितःऽशोकः श्लोकत्वमागतःऽ इत्येवंवादिना ।
-निर्व्यूढश्च स एव लोचनं करिणीवैधव्यकरो मम पुत्रः एकेन काण्डेन विनिपातनसमर्थः हतस्नुषया तथा कृतो यथा काण्डकरणकं वहतीत्युत्तान एवायमर्थः, गाथार्थस्यानालीढतैवेति सम्बन्धः   ॥ ४. ॥
+निर्व्यूढश्च स एव
+
+लोचनं
+
+करिणीवैधव्यकरो मम पुत्रः एकेन काण्डेन विनिपातनसमर्थः हतस्नुषया तथा कृतो यथा काण्डकरणकं वहतीत्युत्तान एवायमर्थः, गाथार्थस्यानालीढतैवेति सम्बन्धः   ॥ ४. ॥
 
 बालप्रिया एतत्प्रकारेत्यस्य ध्वनिप्रभेदेत्यर्थः ।
 वृत्तौऽशरीरत्वेन नवत्वऽमित्युभयत्र भवतीति शेषः.ऽएककाण्डविनिपातीऽति छाया, तस्य विवरणमेकेन काण्डेनेत्यादि ।
@@ -432,7 +460,11 @@ __________
 अत्रोच्यतेसत्यं शान्तस्यैव रसास्याङ्गित्वं महाभारते मोक्षस्य च सर्वपुरुषार्थभ्यः प्राधान्यमित्येतन्न स्वशब्दाभिधेयत्वेनानुक्रमण्या दर्शितम्, दर्शितं तु व्यङ्ग्यत्वेनऽभगवान्वासुदेवश्च कीर्त्यतेऽत्र सनातनःऽ इत्यस्मिन् वाक्ये ।
 अनेन ह्ययमर्थो व्यङ्ग्यत्वेन विवक्षितो यदत्र महाभारते पाण्डवादिचरितं यत्कीर्त्यते तत्सर्वमवसानविरसमविद्याप्रपञ्चरूपञ्च, परमार्थसत्यस्वरूपस्तु भगवान् वासुदेवोऽत्र कीर्त्यते ।
 तस्मात्तस्मिन्नेव परमेश्वरे भगवति भवत भावितचेतसो, मा भूत विभूतिषु निःसारासु रागिणो गुणेषु वा नयविनयपराक्रमादिष्वमीषु केवलेषु केषुचित्सर्वात्मना प्रतिनिविष्टधियः ।
-तथा चाग्रेपश्यत निःसारतां संसारस्येत्यमुमेवार्थे लोचनं शान्तरसस्थायिनं सूचयता तस्यैव च सर्वेतरासारत्वप्रति पादनेन प्राधान्यमुक्तम् ।
+तथा चाग्रेपश्यत निःसारतां संसारस्येत्यमुमेवार्थे
+
+लोचनं
+
+शान्तरसस्थायिनं सूचयता तस्यैव च सर्वेतरासारत्वप्रति पादनेन प्राधान्यमुक्तम् ।
 ननु शृङ्गारवीरादिचमत्कारोऽपि तत्र भातीत्याशङ्क्याहपारमार्थिकेति ।
 भोगाभिनिवेशिनां लोकवासनाविष्टानामङ्गभूतेऽपि रसे तथाभिमानः, यथा शरीरे प्रमातृत्वाभिमानः प्रमातुर्भेगायतनमात्रेऽपि केवलेष्विति ।
 परमेश्वरभक्त्युपकरणेषु बालप्रिया वस्तुभूततयेति ।
@@ -453,7 +485,11 @@ __________
 देवतातीर्थतपःप्रभृतीनां च देवतावशेषाणामन्येषां च ।
 पाण्डवादिचरितवर्णनस्यापि वैराग्यजननतात्पर्याद्वैराग्यस्य च मोक्षमूलत्वान्मोक्षस्य च भगवत्प्राप्त्युपायत्वेन मुख्यतया गीतादिषु प्रदर्शितत्वात्परब्रह्मप्राप्त्युपायत्वमेव ।
 परम्परया वासुदेवादिसञ्ज्ञाभिधेयत्वेन चापरिमितशक्त्यास्पदं परं ब्रह्म गीतादिप्रदेशान्तरेषु तदभिधानत्वेन लब्धप्रसिद्धि माथुरप्रादुर्भावानुकृतसकलस्वरूपं विवक्षितं न तु माथुरप्रादुर्भावांश एव, सनातनशब्दविशेषितत्वात् ।
-लोचनं तु न दोष इत्यर्थः ।
+
+
+लोचनं
+
+तु न दोष इत्यर्थः ।
 विभूतिषु रागिणो गुणेषु च निविष्टधियो मा भूतेति सम्बन्धः ।
 अग्र इति अनुक्रमण्यनन्तरं यो भारतग्रन्थः तत्रेत्यर्थः ।
 ननु वसुदेवापत्यं वासुदेव इत्युच्यते, न परमेश्वरः परमात्मा महादेव इत्याशङ्क्याहवासुदेवादिसंज्ञाभिधेयत्वेनेति ।
@@ -549,7 +585,11 @@ __________
 तदेवं ध्वनिप्रभेदसमाश्रयेण यथा काव्यार्थानां नवत्वं जायते तथा प्रतिपादितम् ।
 गुणीभूत्वयङ्ग्यस्यापि त्रिभेदव्यङ्ग्यापेक्षया ये प्रकारास्तत्समाश्रयेणापि काव्यवस्तूनां नवत्वं भवत्येव ।
 तत्त्वतिविस्तारकारीति नोदाहृतं सहृदयैः स्वयमुत्प्रेक्षणीयम् ।
-लोचनं दर्शयतिन चेत्यादिना ।
+
+
+लोचनं
+
+दर्शयतिन चेत्यादिना ।
 रथ्यायान्तुलाग्रेण काकतालीयेन प्रतिलग्नस्सा मुख्येन स पार्श्वोऽद्यापि सुभग तस्या येनास्यतिक्रान्तः ।
 रसप्रतीतिरिति ।
 परस्परहेतुकशृङ्गारप्रतीतिः ।
@@ -568,7 +608,11 @@ __________
 इतिछाया ।
 इतीदंयुक्तमित्यत्र काक्वा इत्येतन्न युक्तमित्यर्थः ।
 चाइअणेति ।
-लोचनं नवत्वन्ददाति, सत्यपि पुराणकविस्पृष्टेऽर्थे ।
+
+
+लोचनं
+
+नवत्वन्ददाति, सत्यपि पुराणकविस्पृष्टेऽर्थे ।
 तथाहि पुराणीगाथा चाइअणकरपरम्परसञ्चारणखे अणिस्सहससरीरा ।
 अथ्था किवणधरन्थ्था सथ्नापथ्थास्ववन्तीव ॥
 अलङ्कारेण व्यङ्ग्येन वाच्योपस्कारे नवत्वं यथा ममैव     वसन्तमत्तालिपरम्परोपमाः कचास्तवासन् कल रागवृद्धये ।
@@ -683,7 +727,11 @@ __________
 आनन्त्यमेव वाच्यस्य शुद्धस्यापि स्वभावतः ॥ ७ ॥
 शुद्धस्यानपेक्षितव्यङ्ग्यस्यापि वाच्यस्यानन्त्यमेव जायते स्वभावतः ।
 स्वभावो ह्ययं वाच्यानां चेतनानामचेतनानां च यदवस्थाभेदाद्देशभेदात्कालभेदात्स्वालक्षण्यभेदाच्चानन्तता भवति ।
-तैश्च तथाव्यवस्थितैः सद्भिः प्रसिद्धानेकस्वभावानुसरणरूपया स्वभावोक्त्यापि तावदुपनिबध्यमानैर्निरवधिः लोचनं चतुरत्वं समाससङ्घटना ।
+तैश्च तथाव्यवस्थितैः सद्भिः प्रसिद्धानेकस्वभावानुसरणरूपया स्वभावोक्त्यापि तावदुपनिबध्यमानैर्निरवधिः
+
+लोचनं
+
+चतुरत्वं समाससङ्घटना ।
 मधुरत्वमपारुष्यम् ।
 तथाविधानामिति ।
 अपूर्वबन्धच्छायायुक्तानामपि परोपनिबद्धार्थनिबन्धने परकृतकाव्यत्वव्यवहार एव स्यादित्यर्थस्यापूर्वत्वमाश्रयणीयम् ।
@@ -721,7 +769,11 @@ __________
 तच्चोचितचेतनबिषयस्वरूपयोजनयोपनिबध्यमानमन्यदेव सम्पद्यते ।
 यथा कुमारसम्भव एव पर्वतस्वरूपस्य हिमवतो वर्णनं, पुनः सप्तर्षिप्रियोक्तिषु चेतनतस्स्वरूपापेक्षया प्रदर्शितं तदपूर्वमेव प्रतिभाति ।
 प्रसिद्धश्चायं सत्कवीनां मार्गः ।
-इदं लोचनं न च तेषां घटतेऽवधिः, न च ते दृश्यन्ते कथमपि पुनरुक्ताः ।
+इदं
+
+लोचनं
+
+न च तेषां घटतेऽवधिः, न च ते दृश्यन्ते कथमपि पुनरुक्ताः ।
 ये विभ्रमाः प्रियाणामर्था वा सुकविवाणीनाम् ॥ ॥
 चकाराभ्यामतिविस्मयस्सूच्यते ।
 कथमपीति ।
@@ -750,7 +802,11 @@ __________
 यथा हंसानां निनदेषु यैः कवलितैरासज्यते कूजता      मन्यः कोऽपि कषायकण्ठलुठनादाघर्घरो विभ्रमः ।
 ते सम्प्रत्यकठोरवारणवघूदन्ताङ्कुरस्पर्धिनो      निर्याताः कमलाकरेषु बिसिनीकन्दाग्रिमग्रन्थयः ॥    ॥
 एवमन्यत्रापि दिशानयानुसर्तव्यम् ।
-लोचनं क्षणे क्षणे यन्नवतामुपैति तदेव रूपं रमणीयताया इति ।
+
+
+लोचनं
+
+क्षणे क्षणे यन्नवतामुपैति तदेव रूपं रमणीयताया इति ।
 प्रियाणामिति चासंसारं प्रवहद्रूपरो योऽयं कान्तानां विभ्रमविशेषः स नवनव एव दृश्यते ।
 न ह्यसावग्निचयनादिवदन्यतश्शिक्षितः, येन तत्सादृश्यात्पुनरुक्ततां गच्छेत् ।
 अपि तु निसर्गोद्भिद्यमानमदनाङ्कुरविकासमात्रन्तदिति नवनवत्वम् ।
@@ -815,12 +871,16 @@ __________
 उक्तिवैचित्र्यान्नैष दोष इति चेत्किमिदुमुक्तिवैचित्र्यम्? उक्तिर्हि वाच्यविशेषप्रतिपादि वचनम् ।
 तद्वैचित्र्ये कथं न वाच्यवैचित्र्यम् ।
 वाच्यवाचकयोरवनाभावेन प्रवृत्तेः ।
-लोचनं प्रत्यक्षदर्शनेऽपि हि शब्दास्संकेतितं प्राहुर्व्यवहाराय स स्भृतः ।
+
+
+लोचनं
+
+प्रत्यक्षदर्शनेऽपि हि शब्दास्संकेतितं प्राहुर्व्यवहाराय स स्भृतः ।
 तदा स्वलक्षणं नास्ति सङ्केतस्तेन तत्र नः ॥ ॥
 इत्यादियुक्तिभिस्सामान्यमेव स्पृश्यते ।
 किमिति ।
-असंवेद्यमानमर्थपौनरुक्यं कथं प्राकरणिकैरङ्गीकार्यमिति भावः ।
-तमेव प्रकटयतन चेदिति ।
+असंवेद्यमानमर्थपौनरुक्त्यं कथं प्राकरणिकैरङ्गीकार्यमिति भावः ।
+तमेव प्रकटयत न चेदिति ।
 उक्तिर्हीति ।
 पर्यायमात्रतैव यद्युक्तिविशेषस्तत्पर्यायान्तरैरविकलं तदर्थोपनिबन्धे अपौनरुक्त्याभिमानो न भवति ।
 बालप्रिया प्रत्यक्षदर्शनेऽपीति ।
@@ -846,11 +906,20 @@ __________
 अपौनरुक्त्याभिमानो न भवतीति ।
 वाच्यानां च काव्ये प्रतिभासमानानां यद्रूपं तत्तु ग्राह्यविशेषाभेदेनैव प्रतीयते ।
 तेनोक्तवैचित्र्यवादिना वाच्यवैचित्र्यमनिच्छताप्यवश्यमेवाभ्युपगन्तव्यम् ।
-तदयमत्र सङ्क्षेपः वाल्मीकव्यतिरिक्तस्य यद्येकस्यापि कस्यचित् ।
-इष्यते प्रतिभार्थेषु तत्तदानन्त्यमक्षयम् ॥ ॥
+तदयमत्र सङ्क्षेपः 
+
+> वाल्मीकव्यतिरिक्तस्य  
+> यद्येकस्यापि कस्यचित् ।  
+> इष्यते प्रतिभार्थेषु  
+> तत्तदानन्त्यमक्षयम् ॥ ॥
+
 किञ्च, उक्तिवैचित्र्यं यत्काव्यनवत्वे निबन्धनमुच्यते तदस्मत्पक्षानुगुणमेव ।
 यतो यावानयं काव्यार्थानन्त्यभेदहेतुः प्रकारः प्राग्दर्शितः स सर्व एव पुनरुक्तिवैचित्र्याद्द्विगुणतामापद्यते ।
-यश्चायमुपमाश्लेषादिरलङ्कारवर्गः लोचनं तस्माद्विशिष्टवाच्यप्रतपादकनैवोक्तेर्विशेष इति भावः ।
+यश्चायमुपमाश्लेषादिरलङ्कारवर्गः
+
+लोचनं
+
+तस्माद्विशिष्टवाच्यप्रतपादकनैवोक्तेर्विशेष इति भावः ।
 ग्राह्यविशेषेति ।
 ग्राह्यः प्रत्यक्षादिप्रमाणैर्यो विशेषः तस्य यो अभेदः ।
 तेनायमर्थःपदानान्तावत्सामान्ये वा तद्वति वापोहे वा यत्र कुत्रापि वस्तुनि समयः, किमनेन वादान्तरेण? वाक्यात्तद्विशेषः प्रतीयत इति कस्यात्र वादिनो विमतिः ।
@@ -887,7 +956,11 @@ __________
 तोइ ण देउ जणद्दण गोअरी भोदि मणसो ॥ ॥
 इत्थं यथा यथा निरूप्यते तथा तथा न लभ्यतेऽन्तः काव्यार्थानाम् ।
 इदं तूच्यते अवस्थादिविभिन्नानां वाच्यानां विनिबन्धनम् ।
-यत्प्रदर्शितं प्राक्लोचनं तदनुकारतया तु प्रतिमशब्द इत्येवं सर्वत्र वाच्यं केवलं बालोपयोगि काव्यटीकापरिशीलनदौरात्म्यादेषु पर्यायत्वभ्रम इति भावः ।
+यत्प्रदर्शितं प्राक्
+
+लोचनं
+
+तदनुकारतया तु प्रतिमशब्द इत्येवं सर्वत्र वाच्यं केवलं बालोपयोगि काव्यटीकापरिशीलनदौरात्म्यादेषु पर्यायत्वभ्रम इति भावः ।
 एवमर्थानन्त्यमलङ्कारानन्त्यञ्च भणितिवैचित्र्याद्भवति ।
 अन्यथापि च तत्ततो भवतीति दर्शययिभणितिश्चेति ।
 प्रतिनियताया भाषाया गोचरो वाच्योयोऽर्थस्तत्कृतं यद्वैचित्र्यं तन्निबन्धनं निमित्तं यस्य, अलङ्काराणां काव्यार्थानाञ्चानन्त्यस्य ।
@@ -956,7 +1029,11 @@ __________
 
 वाचस्पतिसहस्राणां सहस्रैरपि यत्नतः ।
 निबद्धा सा क्षयं नैति प्रकृतर्जगतामिव  ॥ १०  ॥  ॥ ॥
-यथाहि जगत्प्रकृतिरतीतकल्पपरम्पराविर्भूतविचित्रवस्तुप्रपञ्चा सती लोचनं भूम्नैव दृश्यते लक्ष्ये तत्तु भाति रसाश्रयात् ॥ ॥
+यथाहि जगत्प्रकृतिरतीतकल्पपरम्पराविर्भूतविचित्रवस्तुप्रपञ्चा सती
+
+लोचनं
+
+भूम्नैव दृश्यते लक्ष्ये तत्तु भाति रसाश्रयात् ॥ ॥
 इति कारिका ।
 अन्यस्तु ग्रन्थो मध्योपस्कारः  ॥ ८  ॥  ॥ ॥
 अत्र तु पादत्रयस्यार्थमनूद्य चतुर्थपादार्थोऽपूर्वतयाभिधीयते ।
@@ -1061,7 +1138,11 @@ __________
 तदनन्तरमालेख्यप्रख्यमन्यसाम्यं शरीरान्तरयुक्तमपि तुच्छात्मत्वेन त्यक्तव्यम् ।
 तृतीयं तु विभिन्नकमनीयशरीरसद्भावे सति ससंवादमपि काव्यवस्तु न त्यक्तव्यं कविना ।
 न हि शरीरी शरीरिणान्येन सदृशोऽप्येक एवेति शक्यते वक्तुम् ।
-लोचनं प्रधानभूतस्येत्यर्थः ॥ १२ ॥
+
+
+लोचनं
+
+प्रधानभूतस्येत्यर्थः ॥ १२ ॥
 
 तत्र पूर्वमनन्यात्म तुच्छात्म तदनन्तरम् ।
 तृतीयन्तु प्रसिद्धत्म नान्यसाम्यन्त्यजेत्कविः ॥ ॥
@@ -1169,7 +1250,11 @@ __________
 अनुगतमपि पूर्वच्छायया वस्तु तादृक् ।
 सुकविरुपनिबध्नन्निन्द्यतां नोपयाति ॥ १६ ॥
 
-लोचनं वा चतुरादयो वा पदानामर्थाः ।
+
+
+लोचनं
+
+वा चतुरादयो वा पदानामर्थाः ।
 तानि त्विति ।
 अक्षराणि च पदानि च ।
 तान्येवेति ।
@@ -1250,7 +1335,11 @@ __________
 सैवभगवती सरस्वती स्वयमभिमतमर्थमाविर्भावयति ।
 एतदिव हि महाकवित्वं महाकवीनामित्योम् ।
 इत्यक्लिष्टरसाश्रयोचितगुणालङ्कारशोभाभृतो      यस्माद्वस्तु समीहितं सुकृतिभिः सर्वं समासाद्यते ।
-लोचनं वस्तु सुकवेरिति तृतीयः पादः ।
+
+
+लोचनं
+
+वस्तु सुकवेरिति तृतीयः पादः ।
 कुतः खल्वपूर्वमानयामीत्याशयेन निरुद्योगः परोपनिबद्धवस्तूपजीवको वा स्यादत्याशङ्क्याहसरस्वत्येवेति ।
 कारिकायां सुवेरिति जातावेकवचनमित्यभिप्रायेण व्याचष्टेसुकविनामिति ।
 एतदेव स्पष्टयतिप्राक्तनेत्यादि ।
@@ -1362,12 +1451,20 @@ __________
 इतीति ।
 इति बुद्ध्येत्यर्थः ।
 सम्पत्तये प्रवर्तनीय इति सम्बन्धः ।
-लोचनं तदेव नामश्रवणं केषाञ्चन्निवृत्तिं करोति, तन्मात्सर्यविजृम्भितं नात्र गणनीयम्, निश्रेयसप्रयोजनादेव हि श्रुतात्कोऽपि रागान्धो यदि निवर्तते किमेतावता प्रयोजनमप्रयोजनमप्यवश्यं वक्तव्यमेव स्यात् ।
+
+
+लोचनं
+
+तदेव नामश्रवणं केषाञ्चन्निवृत्तिं करोति, तन्मात्सर्यविजृम्भितं नात्र गणनीयम्, निश्रेयसप्रयोजनादेव हि श्रुतात्कोऽपि रागान्धो यदि निवर्तते किमेतावता प्रयोजनमप्रयोजनमप्यवश्यं वक्तव्यमेव स्यात् ।
 तस्मादर्थिनां प्रवृत्यङ्गन्नाम प्रसिद्धम् ।
 स्फुटीकृतार्थवैचित्र्यबहिःप्रसरदायिनीम् ॥     ॥
 तुर्यां शक्तिमहं वन्दे प्रत्यक्षार्थनिदर्शिनीम् ॥
 आनन्दवर्धनविवेकविकासिकाव्यालोकार्थतत्त्वघटनादनुमेयसारम् ।
-यत्प्रोन्मिषत्सकलसद्विषयप्रकाशि व्यापार्यताभिनवगुप्तविलोचनं तत् ॥
+यत्प्रोन्मिषत्सकलसद्विषयप्रकाशि व्यापार्यताभिनवगुप्तवि
+
+लोचनं
+
+तत् ॥
 बालप्रिया तदिति ।
 तस्मादित्यर्थः ।
 एतदेव प्रथितमिति ।
@@ -1397,11 +1494,19 @@ __________
 आनन्देत ।
 आनन्दवर्धनस्य यो विवेकः विविच्यतत्तदर्थावबोधः तेन विकासी प्रकाशमानो यः काव्यलोकस्तस्य यान्यर्थतत्वानि सारार्थाः तेषां घटनात्संयोजनाद्धेतोः ।
 अनुमेयस्सार उत्कर्षो यस्य तत्, किञ्च यत्प्रोन्मिषत्सहृदयेषु प्रकाशमानमथ च प्रकर्षेण उन्मिषत्सत्सकलानां सर्वेषां सर्वेषां काव्यादीनां सद्विषयान् सारार्थान् सकलान् सद्विषयान्वा अथ च सकलानां सर्वेषां काव्यादीनां सद्बिषयान् सारार्थान् सकलान् सद्विषयान् वा अथ च सकलान् सद्विषयान् विद्यमानान् पदार्थान् प्रकाशयतीति तथा भवति तत्तथाविधम् ।
-अभिनवगुप्तस्य तन्नाम्नः स्वस्य, अथ च अभिनवं नवीनां गुप्तमन्येषामविदितं च लोचनमालोचनं ज्ञानं नेत्रं च व्यापार्यत आत्मना व्यापारितम् ।
+अभिनवगुप्तस्य तन्नाम्नः स्वस्य, अथ च अभिनवं नवीनां गुप्तमन्येषामविदितं च लोचनमा
+
+लोचनं
+
+ज्ञानं नेत्रं च व्यापार्यत आत्मना व्यापारितम् ।
 णिजन्तात्कर्मणि लङ् ।
 अत्र ज्ञाने नेत्रसाम्यं गम्यते ।
 श्रीसिद्धीति ।
-श्रीमतः सिद्धिचेलस्य तन्नाम्नः गुरोः चरणाब्जपरागैः पूतो यो लोचनं श्रीसिद्धिचेलचरणाब्जपरागपूतभट्टेन्दुराजमतिसंस्कृतबुद्धिलेशः ।
+श्रीमतः सिद्धिचेलस्य तन्नाम्नः गुरोः चरणाब्जपरागैः पूतो यो
+
+लोचनं
+
+श्रीसिद्धिचेलचरणाब्जपरागपूतभट्टेन्दुराजमतिसंस्कृतबुद्धिलेशः ।
 वाक्यप्रमाणपदवेदिगुरुः प्रबन्धसेवारसो व्यरचयदध्वनि वस्तुवृत्तिम् ॥
 सज्जनान् कविरसौ न याचते ह्लादनाय शशमृत्किमर्थितः ।
 नैव निन्दति खलान्मुहुर्मुहुः धिक्कृतोऽपि न हि शीतलोऽनलः ॥    ॥
@@ -1450,6 +1555,10 @@ __________
 सुहृत्सतीर्थ्यो गोश्रीशो यस्यालम्बोऽस्ति सर्वतः ॥    ॥
 रामाख्यष्षारकस्सोऽहमकार्षं टिप्पणीमिमाम् ।
 इष्वग्निखेषु कल्यब्दे बालानामस्त्वियं प्रिया ॥    ॥
-प्रौढं क्व लोचनं क्वाहं मन्दधीर्बहुधात्र तत् ।
+प्रौढं क्व
+
+लोचनं
+
+क्वाहं मन्दधीर्बहुधात्र तत् ।
 टिप्पण्यां स्खलितानि स्युस्तदियं शोध्यतां बुधैः ॥
 इति श्रीसहृदयतिलक पण्डितराज बिरुदद्वयशालिना रामनाम्ना शारकेण विरचितायां काव्यालोकलोचनटिप्पण्यां बालप्रियाख्यायां चतुर्थ उद्योतः समाप्तोऽयं ग्रन्थः ॥
